QGLXContext survives screen removal

The screen pointer is usually only used to get the Display, which normally
doesn't change anyway.

Task-number: QTBUG-39996
Change-Id: Ie35f02fc9330647897a9f081afb8c9ce550eed2a
Reviewed-by: Laszlo Agocs <laszlo.agocs@digia.com>